# auto_plot

./: .gitignore  ConsumoGarantias.xlsx  DatosGarantias.xlsx  PromedioTiempoFallas.xlsx  __init__.py  datos.json  home.py  main.py  main_frame.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml
.todo/: tasks.json
alembic/: env.py
auto_plot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: constants.py  constants_cleaner.py  constants_colors.py  constants_common.py  constants_views.py  dataclasses.py  enums.py  enums_colors.py
db_data/: __init__.py  crud_common.py  crud_services.py
excel_info/: coches_por_cabecera.xlsx  flota7.xlsx  internos_por_cabecera.xlsx
infrastructure/: __init__.py  mapper.py  unit_of_work.py
interfaces/: mapper.py  repository.py  viewmodel.py
json/: depositos.json  motores.json  nombres_inyectores.json
pages/: deviation_page.py  duracion_repuestos_page.py  falla_equipos_garantia_page.py  forecast_page.py  index_page.py  load_data_page.py  main_page.py  maxmin_page.py
plot/: consumo_garantias_plotter.py  deviation_plotter.py  duracion_repuestos_plotter.py  falla_garantias_plotter.py  forecast_plotter.py  index_plotter.py
plot_backend/: __init__.py  arreglar_flota.py  arreglar_listado_existencias.py  autografico.py  constants.py  consumo_gomeria.py  general_utils.py  indice_consumo.py  indice_consumo_gomeria.py  maxmin.py  prevision_compra.py  utils_listado_existencias.py  utils_maxmin.py
plotters/: consumo_desviacion_indices_plotter.py  conteo_stock_plotter.py  (+5 more)
(+790 files in other folders)
