[project]
name = "auto-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "babel>=2.17.0",
    "bs4>=0.0.2",
    "matplotlib>=3.10.8",
    "multipledispatch>=1.0.0",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
    "selenium>=4.39.0",
    "sqlalchemy>=2.0.45",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.2",
    "strenum>=0.4.15",
]
